--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Segoe UI';
     font-size: 16px;
     color: white;
     background: rgb(32, 31, 42);
@@ -13,6 +13,6 @@ body {
     justify-content: center;
 
     h1 {
-        font-size: 100px;
+        font-size: 60px;
     }
 }
