--- a/src/styles/repositories.scss
+++ b/src/styles/repositories.scss
@@ -1,8 +1,22 @@
 section.repository-list {
-    margin: 40px;
+    margin: 25%;
+    display: flex;
+    flex-direction: column;
 
     h1 {
         margin-bottom: 16px;
+        text-shadow: #6b27cb 2px 2px;
+    }
+
+    h2 {
+        color: #6b27cb;
+        margin-bottom: 16px;
+    }
+
+    img {
+        width: 20%;
+        height: auto;
+        border-radius: 50%;
     }
 
     ul {
